--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,6 @@ uvicorn==0.27.1
 uvloop==0.19.0
 watchfiles==0.21.0
 websockets==12.0
+langchain==0.1.7
+langchain-openai==0.0.6
+atlassian-python-api==3.41.10
